* add VCS control headers.

--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,8 @@ Maintainer: Kel Modderman <kelmo@siduxguide.org>
 Uploaders: Stefan Lippers-Hollmann <s.l-h@gmx.de>
 Build-Depends: cdbs, debhelper (>= 5)
 Standards-Version: 3.7.2
+XS-Vcs-Svn: svn://svn.berlios.de/fullstory/sidux-searchplugins/trunk
+XS-Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/sidux-searchplugins/trunk/
 
 Package: sidux-searchplugins
 Architecture: all
